--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
+    "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "firebase": "^11.3.1",
     "framer-motion": "^12.4.3",
