--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
