--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ REACT_APP_FIREBASE_STORAGE_BUCKET=revenue-profit-app.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=468980813622
 REACT_APP_FIREBASE_APP_ID=1:468980813622:web:6fb885532508fe...
 REACT_APP_FIREBASE_MEASUREMENT_ID=G-3WJ29GSV28
+REACT_APP_GIT_SHA=$VERCEL_GIT_COMMIT_SHA
