--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "echo \"{\\\"version\\\": \\\"$VERCEL_GIT_COMMIT_SHA\\\"}\" > public/version.json && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
+},
   "eslintConfig": {
     "extends": [
       "react-app",
