--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.16.14",
+    "@mui/system": "^5.16.7",
     "@mui/x-data-grid": "^7.27.0",
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.8.4",
