--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-hotkeys-hook": "^5.0.1",
