--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@mui/material": "^5.16.14",
     "@mui/system": "^5.16.7",
     "@mui/x-data-grid": "^7.27.0",
+    "@mui/x-date-pickers": "^6.20.2",
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
+    "date-fns": "^2.30.0",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "firebase": "^11.3.1",
@@ -33,6 +35,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "recharts": "^2.15.3",
     "use-debounce": "^10.0.5",
     "xlsx": "^0.18.5"
