--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "nprogress": "^0.2.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-color": "^2.19.3",
@@ -36,6 +37,7 @@
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "react-signature-canvas": "^1.1.0-alpha.2",
+    "react-to-print": "^3.1.1",
     "recharts": "^2.15.3",
     "use-debounce": "^10.0.5",
     "xlsx": "^0.18.5"
