--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.4.0"
   },
