--- a/functions/package.json
+++ b/functions/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "@sendgrid/mail": "^8.1.6",
     "firebase-admin": "^12.7.0",
-    "firebase-functions": "^6.4.0"
+    "firebase-functions": "^5.1.1",
+    "nodemailer": "^7.0.6"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
