--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "http-proxy-middleware": "^3.0.3",
         "lodash": "^4.17.21",
         "lucide-react": "^0.475.0",
+        "notistack": "^3.0.2",
         "nprogress": "^0.2.0",
         "qrcode.react": "^4.2.0",
         "react": "^18.2.0",
