--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@mui/x-data-grid": "^7.27.0",
         "@mui/x-date-pickers": "^6.20.2",
         "@shadcn/ui": "^0.0.4",
+        "ably": "^2.13.0",
         "axios": "^1.8.4",
         "clsx": "^2.1.1",
         "date-fns": "^2.30.0",
