--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "react-input-autosize": "^3.0.0",
         "react-number-format": "^5.4.4",
         "react-query": "^3.39.3",
+        "react-resizable": "^3.0.5",
         "react-router-dom": "^7.1.5",
         "react-scripts": "5.0.1",
         "react-signature-canvas": "^1.1.0-alpha.2",
