--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@mui/x-date-pickers": "^6.20.2",
         "@shadcn/ui": "^0.0.4",
         "ably": "^2.13.0",
+        "autoprefixer": "^10.4.21",
         "axios": "^1.8.4",
         "clsx": "^2.1.1",
         "date-fns": "^2.30.0",
@@ -24,9 +25,10 @@
         "framer-motion": "^12.16.0",
         "http-proxy-middleware": "^3.0.3",
         "lodash": "^4.17.21",
-        "lucide-react": "^0.475.0",
+        "lucide-react": "^0.545.0",
         "notistack": "^3.0.2",
         "nprogress": "^0.2.0",
+        "postcss": "^8.5.6",
         "qrcode.react": "^4.2.0",
         "react": "^18.2.0",
         "react-beautiful-dnd": "^13.1.1",
@@ -43,18 +45,16 @@
         "react-signature-canvas": "^1.1.0-alpha.2",
         "react-to-print": "^3.1.1",
         "recharts": "^2.15.3",
+        "tailwindcss": "^4.1.14",
         "use-debounce": "^10.0.5",
         "xlsx": "^0.18.5"
     },
     "devDependencies": {
-        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-        "autoprefixer": "^10.4.20",
-        "postcss": "^8.4.20",
-        "tailwindcss": "^3.3.0"
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "echo \"{\\\"version\\\": \\\"$VERCEL_GIT_COMMIT_SHA\\\"}\" > public/version.json && react-scripts build",
+        "build": "echo \"{\\\"version\\\": \\\"$VERCEL_GIT_COMMIT_SHA\\\"}\" > public/version.json && GENERATE_SOURCEMAP=false react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
