--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@mui/x-data-grid": "^7.27.0",
         "@mui/x-date-pickers": "^6.20.2",
         "@shadcn/ui": "^0.0.4",
+        "@vercel/speed-insights": "^1.2.0",
         "ably": "^2.13.0",
         "autoprefixer": "^10.4.21",
         "axios": "^1.8.4",
