--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "@vercel/speed-insights": "^1.2.0",
         "ably": "^2.13.0",
         "autoprefixer": "^10.4.21",
-        "axios": "^1.8.4",
+        "axios": "^1.12.2",
         "clsx": "^2.1.1",
         "date-fns": "^2.30.0",
         "exceljs": "^4.4.0",
@@ -31,13 +31,14 @@
         "nprogress": "^0.2.0",
         "postcss": "^8.5.6",
         "qrcode.react": "^4.2.0",
-        "react": "^18.2.0",
+        "react": "^18.3.1",
         "react-beautiful-dnd": "^13.1.1",
         "react-color": "^2.19.3",
-        "react-dom": "^18.2.0",
+        "react-dom": "^18.3.1",
+        "react-dropzone": "^14.3.8",
+        "react-helmet-async": "^2.0.5",
         "react-hot-toast": "^2.5.2",
         "react-hotkeys-hook": "^5.0.1",
-        "react-input-autosize": "^3.0.0",
         "react-number-format": "^5.4.4",
         "react-query": "^3.39.3",
         "react-resizable": "^3.0.5",
