update phát hành văn bản

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "react-hot-toast": "^2.5.2",
         "react-hotkeys-hook": "^5.0.1",
         "react-number-format": "^5.4.4",
+        "react-pdf": "^10.2.0",
         "react-query": "^3.39.3",
         "react-resizable": "^3.0.5",
         "react-router-dom": "^7.1.5",
