--- a/package.json
+++ b/package.json
@@ -5,20 +5,18 @@
     "dependencies": {
         "@dnd-kit/core": "^6.3.1",
         "@dnd-kit/sortable": "^10.0.0",
+        "@dnd-kit/utilities": "^3.2.2",
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.1",
         "@mui/icons-material": "^5.11.16",
         "@mui/lab": "^5.0.0-alpha.153",
         "@mui/material": "^5.16.14",
         "@mui/system": "^5.16.7",
+        "@mui/utils": "^7.3.3",
         "@mui/x-data-grid": "^7.27.0",
         "@mui/x-date-pickers": "^6.20.2",
-        "@shadcn/ui": "^0.0.4",
         "@vercel/speed-insights": "^1.2.0",
-        "ably": "^2.13.0",
-        "autoprefixer": "^10.4.21",
         "axios": "^1.12.2",
-        "clsx": "^2.1.1",
         "date-fns": "^2.30.0",
         "exceljs": "^4.4.0",
         "file-saver": "^2.0.5",
@@ -29,7 +27,6 @@
         "lucide-react": "^0.545.0",
         "notistack": "^3.0.2",
         "nprogress": "^0.2.0",
-        "postcss": "^8.5.6",
         "qrcode.react": "^4.2.0",
         "react": "^18.3.1",
         "react-beautiful-dnd": "^13.1.1",
@@ -44,22 +41,21 @@
         "react-query": "^3.39.3",
         "react-resizable": "^3.0.5",
         "react-router-dom": "^7.1.5",
-        "react-scripts": "5.0.1",
-        "react-signature-canvas": "^1.1.0-alpha.2",
         "react-to-print": "^3.1.1",
-        "recharts": "^2.15.3",
-        "tailwindcss": "^4.1.14",
-        "use-debounce": "^10.0.5",
         "xlsx": "^0.18.5"
     },
     "devDependencies": {
-        "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+        "@vitejs/plugin-react": "^5.0.4",
+        "depcheck": "^1.4.7",
+        "eslint-config-react-app": "^7.0.1",
+        "vite": "^7.1.12",
+        "vite-plugin-svgr": "^4.5.0"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "echo \"{\\\"version\\\": \\\"$VERCEL_GIT_COMMIT_SHA\\\"}\" > public/version.json && GENERATE_SOURCEMAP=false react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "dev": "vite",
+        "start": "vite",
+        "build": "echo \"{\\\"version\\\": \\\"$VERCEL_GIT_COMMIT_SHA\\\"}\" > public/version.json && vite build",
+        "preview": "vite preview"
     },
     "engines": {
         "node": ">=18"
