--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
         "react-resizable": "^3.0.5",
         "react-router-dom": "^7.1.5",
         "react-to-print": "^3.1.1",
-        "xlsx": "^0.18.5"
+        "xlsx": "^0.18.5",
+        "xlsx-js-style": "^1.2.0"
     },
     "devDependencies": {
         "@vitejs/plugin-react": "^5.0.4",
