--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@mui/utils": "^7.3.3",
         "@mui/x-data-grid": "^7.27.0",
         "@mui/x-date-pickers": "^6.20.2",
+        "@tanstack/react-table": "^8.21.3",
         "@vercel/speed-insights": "^1.2.0",
         "axios": "^1.12.2",
         "date-fns": "^2.30.0",
@@ -25,11 +26,9 @@
         "http-proxy-middleware": "^3.0.3",
         "lodash": "^4.17.21",
         "lucide-react": "^0.545.0",
-        "notistack": "^3.0.2",
         "nprogress": "^0.2.0",
         "qrcode.react": "^4.2.0",
         "react": "^18.3.1",
-        "react-beautiful-dnd": "^13.1.1",
         "react-color": "^2.19.3",
         "react-dom": "^18.3.1",
         "react-dropzone": "^14.3.8",
@@ -38,7 +37,7 @@
         "react-hotkeys-hook": "^5.0.1",
         "react-number-format": "^5.4.4",
         "react-pdf": "^10.2.0",
-        "react-query": "^3.39.3",
+        "@tanstack/react-query": "^5.62.11",
         "react-resizable": "^3.0.5",
         "react-router-dom": "^7.1.5",
         "react-to-print": "^3.1.1",
