Fix Vercel build: Add vite.config.js and Node.js version generation script
- Add vite.config.js with proxy configuration and build optimizations
- Replace shell echo command with Node.js script for version.json generation
- Add prebuild script to generate version.json before build
- Fix build compatibility issues on Vercel deployment platform

--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "scripts": {
         "dev": "vite",
         "start": "vite",
-        "build": "echo \"{\\\"version\\\": \\\"$VERCEL_GIT_COMMIT_SHA\\\"}\" > public/version.json && vite build",
+        "prebuild": "node scripts/generate-version.js",
+        "build": "vite build",
         "preview": "vite preview"
     },
     "engines": {
