--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "scripts": {
         "dev": "vite",
         "start": "vite",
-        "build": "vite build",
+        "build": "node -e \"const fs=require('fs');const v=process.env.VERCEL_GIT_COMMIT_SHA||'dev';fs.writeFileSync('public/version.json',JSON.stringify({version:v},null,2))\" && vite build",
         "preview": "vite preview"
     },
     "engines": {
