--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
         "vite": "^7.1.12",
         "vite-plugin-svgr": "^4.5.0"
     },
+    "optionalDependencies": {
+        "@rollup/rollup-linux-x64-gnu": "^4.52.5"
+    },
     "scripts": {
         "dev": "vite",
         "start": "vite",
