--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "scripts": {
         "dev": "vite",
         "start": "vite",
-        "build": "node -e \"const fs=require('fs');const v=process.env.VERCEL_GIT_COMMIT_SHA||'dev';fs.writeFileSync('public/version.json',JSON.stringify({version:v},null,2))\" && vite build",
+        "build": "node -e \"const fs=require('fs');const path=require('path');const publicDir='public';if(!fs.existsSync(publicDir))fs.mkdirSync(publicDir,{recursive:true});const v=process.env.VERCEL_GIT_COMMIT_SHA||'dev';fs.writeFileSync(path.join(publicDir,'version.json'),JSON.stringify({version:v},null,2))\" && vite build",
         "preview": "vite preview"
     },
     "engines": {
