--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,6 @@
 {
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
   "headers": [
     {
       "source": "/(.*).(js|css|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot)$",
@@ -23,6 +25,10 @@
     {
       "source": "/api/:path*",
       "destination": "http://115.78.92.176:3001/:path*"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
