--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
         "@dnd-kit/utilities": "^3.2.2",
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.1",
-        "@mui/icons-material": "^5.15.0",
-        "@mui/lab": "^5.0.0-alpha.170",
-        "@mui/material": "^5.15.0",
-        "@mui/system": "^5.15.0",
-        "@mui/x-data-grid": "^6.20.0",
-        "@mui/x-date-pickers": "^6.20.0",
+        "@hookform/resolvers": "^5.2.2",
+        "@mui/icons-material": "^7.3.5",
+        "@mui/lab": "^7.0.1-beta.19",
+        "@mui/material": "^7.3.5",
+        "@mui/system": "^7.3.5",
+        "@mui/x-data-grid": "^8.19.0",
+        "@mui/x-date-pickers": "^8.19.0",
         "@tanstack/react-query": "^5.62.11",
         "@tanstack/react-table": "^8.21.3",
         "@vercel/speed-insights": "^1.2.0",
-        "axios": "^1.12.2",
-        "date-fns": "^2.30.0",
+        "axios": "^1.13.2",
+        "date-fns": "^4.1.0",
         "exceljs": "^4.4.0",
         "file-saver": "^2.0.5",
         "firebase": "^11.3.1",
@@ -33,6 +34,7 @@
         "react-dom": "^18.3.1",
         "react-dropzone": "^14.3.8",
         "react-helmet-async": "^2.0.5",
+        "react-hook-form": "^7.66.1",
         "react-hot-toast": "^2.5.2",
         "react-hotkeys-hook": "^5.0.1",
         "react-number-format": "^5.4.4",
@@ -41,7 +43,8 @@
         "react-router-dom": "^7.1.5",
         "react-to-print": "^3.1.1",
         "xlsx": "^0.18.5",
-        "xlsx-js-style": "^1.2.0"
+        "xlsx-js-style": "^1.2.0",
+        "zod": "^4.1.12"
     },
     "devDependencies": {
         "@vitejs/plugin-react": "^5.0.4",
