--- a/.env
+++ b/.env
@@ -6,3 +6,12 @@ REACT_APP_FIREBASE_MESSAGING_SENDER_ID=468980813622
 REACT_APP_FIREBASE_APP_ID=1:468980813622:web:6fb885532508fe...
 REACT_APP_FIREBASE_MEASUREMENT_ID=G-3WJ29GSV28
 REACT_APP_GIT_SHA=$VERCEL_GIT_COMMIT_SHA
+
+VITE_FIREBASE_API_KEY=AIzaSyABAtDgu1RWl8yhHECA2WDqOYTO_6NNQ6I
+VITE_FIREBASE_AUTH_DOMAIN=revenue-profit-app.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=revenue-profit-app
+VITE_FIREBASE_STORAGE_BUCKET=revenue-profit-app.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=468098013262
+VITE_FIREBASE_APP_ID=1:468098013262:web:6fb885532508fce54d0b1f
+VITE_FIREBASE_MEASUREMENT_ID=G-3WJ29GSV28
+VITE_FIREBASE_DATABASE_URL=https://revenue-profit-app-default-rtdb.asia-southeast1.firebasedatabase.app
