--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "react-resizable": "^3.0.5",
         "react-router-dom": "^7.1.5",
         "react-to-print": "^3.1.1",
+        "react-window": "^2.2.3",
         "xlsx": "^0.18.5",
         "xlsx-js-style": "^1.2.0",
         "zod": "^4.1.12"
