--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
         "@vitejs/plugin-react": "^5.0.4",
         "depcheck": "^1.4.7",
         "eslint-config-react-app": "^7.0.1",
+        "rollup-plugin-visualizer": "^6.0.5",
+        "sharp": "^0.34.5",
         "vite": "^7.1.12",
         "vite-plugin-svgr": "^4.5.0"
     },
