--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@mui/lab": "^7.0.1-beta.19",
         "@mui/material": "^7.3.5",
         "@mui/system": "^7.3.5",
+        "@mui/x-charts": "^8.22.0",
         "@mui/x-data-grid": "^8.19.0",
         "@mui/x-date-pickers": "^8.19.0",
         "@tanstack/react-query": "^5.62.11",
