--- a/.env
+++ b/.env
@@ -15,3 +15,4 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=468098013262
 VITE_FIREBASE_APP_ID=1:468098013262:web:6fb885532508fce54d0b1f
 VITE_FIREBASE_MEASUREMENT_ID=G-3WJ29GSV28
 VITE_FIREBASE_DATABASE_URL=https://revenue-profit-app-default-rtdb.asia-southeast1.firebasedatabase.app
+VITE_FIREBASE_VAPID_KEY=BIPVgv2XWz4tu8UZrkhQZMjzbHyAghA45bJ3XYnHSSGu9fbp-L-xJByD2W-d-vAsBUYXJdegs3YS3XYazuYv6mA
