--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "react-resizable": "^3.0.5",
         "react-router-dom": "^7.1.5",
         "react-to-print": "^3.1.1",
+        "react-zoom-pan-pinch": "^3.7.0",
         "zod": "^4.1.12"
     },
     "devDependencies": {
